<resources>
    <string name="app_name">t3a1MaiquesDavid</string>
    <string name="texto_descripcion">Una receta ideal para iniciarse con los cupcakes, con la que preparar unos ricos cupcakes de chocolate con cobertura de buttercrea, cobertura de la que os proponemos tres versiones.</string>
    <string name="descripcion">Descripción</string>
    <string name="cupcakes">Cupcakes</string>
    <string name="david_maiques">David Maiques</string>
    <string name="ingredientes">Ingredientes</string>
    <string name="texto_ingredientes">-165 gramos de harina de reposteria\n-165 gramos de mantequilla sin sal\n-165 gramos de azucar\n-15 ml de esencia de vainilla\n-50 ml de leche\n-5 gramos de levadura\n-3 huevos medianos</string>
    <string name="receta">Receta</string>
    <string name="texto_receta">Una vez que tenemos el horno en marcha, y todos nuestros ingredientes medidos y pesados, vamos a comenzar a preparar la base de nuestros cupcakes. Nosotros empleamos una masadora automática, pero se puede emplear también unas varillas manuales o un robot de cocina, lo que os resulte más comodo dentro de lo que dispongáis</string>
</resources>