<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#D3CBCB">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glHor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glVer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".5"/>

    <ImageView
        android:id="@+id/imgFondo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/glHor"
        android:src="@drawable/imagen_fondo"/>
    <!-- Con centercrop NO se puede ver todo el ancho de la imagen, me desborda -->


    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cupcakes"
        android:textColor="#1E71D6"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/glHor"
        android:layout_marginStart="16dp"/>


        <TextView
            android:id="@+id/txtAutor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/david_maiques"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
            android:textSize="30dp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/glHor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtTitulo"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/txtDescripcion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/descripcion"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/glHor"
        app:layout_constraintEnd_toStartOf="@+id/glVer"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/texto_descripcion"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDescripcion"
        app:layout_constraintEnd_toStartOf="@+id/glVer"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/txtIngredientes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/ingredientes"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@id/glVer"
        app:layout_constraintTop_toTopOf="@+id/glHor"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/txtingredientesDetalle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/texto_ingredientes"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="@id/glVer"
        app:layout_constraintTop_toBottomOf="@+id/txtIngredientes"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/txtReceta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/receta"
        android:textSize="20dp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtingredientesDetalle"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="16dp"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/texto_receta"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtReceta"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>